[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/logos/Transparent logo.png" type="Texture" id=1]
[ext_resource path="res://scenes/menuObjects/LoginScreen/LogoScreen.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/path = NodePath("dissolve_rect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "dissolve"
length = 0.35
tracks/0/type = "value"
tracks/0/path = NodePath("dissolve_rect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "dissolve logo"
length = 0.35
tracks/0/type = "value"
tracks/0/path = NodePath("Control:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="LogoScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Control" type="Control" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.0
margin_right = -1.0

[node name="TransparentLogo" type="Sprite" parent="Control"]
position = Vector2( 638, 324 )
scale = Vector2( 0.467593, 0.467593 )
texture = ExtResource( 1 )

[node name="dissolve_rect" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.00392157, 0, 0.0117647, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/dissolve = SubResource( 2 )
"anims/dissolve logo" = SubResource( 3 )

[node name="Timer2" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
